--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,8 @@ export(crep_hedges_g)
 export(crep_icc)
 export(crep_ii)
 export(crep_scale)
-import(stats)
+importFrom(dplyr,filter)
+importFrom(lawstat,rjb.test)
+importFrom(lme4,lmer)
+importFrom(moments,kurtosis)
+importFrom(moments,skewness)
