Clustered g, helpfile update
Added cluster correction to crep_hedges_g; updated various helpfiles to import correctly from stats.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,7 @@ importFrom(lawstat,rjb.test)
 importFrom(lme4,lmer)
 importFrom(moments,kurtosis)
 importFrom(moments,skewness)
+importFrom(stats,median)
+importFrom(stats,pf)
+importFrom(stats,pnorm)
+importFrom(stats,sd)
